--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "mws-restaurant-stage-1",
   "version": "1.0.0",
   "description": "front end for restaurant reviews app",
-  "main": "./src/sw.js",
-  "dependencies": {},
+  "main": "./public/sw.js",
+  "dependencies": {
+    "npm": "^6.2.0"
+  },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^1.0.0",
+    "idb": "^2.1.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8"
