--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "description": "front end for restaurant reviews app",
   "main": "./public/sw.js",
   "dependencies": {
-    "npm": "^6.2.0"
+    "browser-sync": "^2.24.6",
+    "npm": "^6.2.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "browser-sync-webpack-plugin": "^2.2.2",
     "css-loader": "^1.0.0",
     "idb": "^2.1.3",
     "style-loader": "^0.21.0",
-    "webpack": "^4.14.0",
-    "webpack-cli": "^3.0.8"
+    "webpack": "^4.16.3",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "build": "webpack",
-    "watch": "webpack --w"
+    "watch": "webpack --w",
+    "dev": "webpack-dev-server --progress --colors",
+    "start": "webpack && npm run dev"
   },
   "repository": {
     "type": "git",
